--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="media-container">
-    <img id="img" src="images/mascotte.gif" alt="immagine iniziale">
+    <img id="img" src="mascotte.gif" alt="immagine iniziale">
   </div>
 </body>
 </html>
